@@ -1,5 +1,17 @@
 2010-01-04  Maciej Stachowiak  <mjs@apple.com>
 
+        Reviewed by Simon Hausmann.
+
+        Fix some PLATFORM(*_ENDIAN) uses to CPU()
+        https://bugs.webkit.org/show_bug.cgi?id=33148
+
+        * platform/image-decoders/bmp/BMPImageReader.h:
+        (WebCore::BMPImageReader::readUint16):
+        (WebCore::BMPImageReader::readUint32):
+        (WebCore::BMPImageReader::readCurrentPixel):
+
+2010-01-04  Maciej Stachowiak  <mjs@apple.com>
+
         Reviewed by Adam Barth.
 
         Reorganize, document and rename CPU() platform macros.
